--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>my-project</title>
+    <script type="text/javascript" src="http://api.map.baidu.com/api?v=2.0&ak=7bmiaZGA2cwKp8vkyTBj4cPIyyyuXX6S"></script>
   </head>
   <body>
     <div id="app"></div>
